hphp/test/slow/static_prop_with_non_const_expr.php.expectf

Fatal error: Invalid expression in constant initializer in %s/static_prop_with_non_const_expr.php on line 8
